--- a/PyFormula/requirements.txt
+++ b/PyFormula/requirements.txt
@@ -1,10 +1,8 @@
-colorama==0.4.1
-coloredlogs==10.0
-deepdiff==4.0.6
+decorator==4.4.0
 humanfriendly==4.18
-Jinja2==2.10.1
 jsonpickle==1.2
 MarkupSafe==1.1.1
 more-itertools==7.1.0
+networkx==2.3
 ordered-set==3.1.1
 pyreadline==2.1
