--- a/PyFormula/requirements.txt
+++ b/PyFormula/requirements.txt
@@ -7,3 +7,6 @@ more-itertools==7.1.0
 networkx==2.3
 ordered-set==3.1.1
 pyreadline==2.1
+semantic-version==2.8.1
+setuptools-rust==0.10.6
+toml==0.10.0
