--- a/differential-formula/Cargo.toml
+++ b/differential-formula/Cargo.toml
@@ -19,3 +19,4 @@ nom = "5"
 num = { version = "0.2", features = ["serde"] }
 im = { version = "14", features = ["serde"] }
 serde = { version = "1", features = ["derive", "rc", "std"] }
+readonly = "0.1"
