--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "differential-formula"
 version = "0.1.0"
 authors = ["Qishen Zhang <qishen23@gmail.com>"]
 edition = "2018"
+description = "Incremental Formal Modeling Using Logic Programming and Analysis"
+license = "MIT"
 
 exclude = [
     "tests/samples/CommandLine.exe",
