Update Cargo.toml and add one more incremental test on aggregation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ im = { version = "14", features = ["serde"] }
 serde = { version = "1", features = ["derive", "rc", "std"] }
 readonly = "0.1"
 petgraph = "0.5"
+num-iter = "0.1"
