--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [
 [dependencies]
 abomonation = "0.7.3"
 abomonation_derive = "0.5.0"
-
+bimap = "0.4.0"
 
 # Enable `bincode` feature to use serde instead of Abomonation for serialization.
 # timely = { version = "0.11.1", features = ["bincode"] } 
@@ -28,10 +28,10 @@ timely_sort = "0.1.6"
 
 # Internally differential-dataflow use timely as a dependency and they have to be at the same version.
 # differential-dataflow = "0.11.0"
-# differential-dataflow = { path = "../differential-dataflow" }
-differential-dataflow = { git = "https://github.com/qishen/differential-dataflow.git", branch = "add-serde-fields" }
+differential-dataflow = { path = "../differential-dataflow" }
+# differential-dataflow = { git = "https://github.com/qishen/differential-dataflow.git", branch = "add-serde-fields" }
 rand = "0.4"
-enum_dispatch = "0.3.0"
+enum_dispatch = "0.3.1"
 nom = "5"
 num = { version = "0.2", features = ["serde"] }
 im = { version = "14", features = ["serde"] }
