--- a/ddlog_examples/formula2ddlog/formula2ddlog_lib/Cargo.toml
+++ b/ddlog_examples/formula2ddlog/formula2ddlog_lib/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 rand = "0.4"
-differential_datalog = {path = "../formula2ddlog_ddlog/differential_datalog"}
-formula2ddlog = {path = "../formula2ddlog_ddlog/"}
-types = {path = "../formula2ddlog_ddlog/types"}
+differential_datalog = { path = "../formula2ddlog_ddlog/differential_datalog" }
+formula2ddlog = { path = "../formula2ddlog_ddlog/" }
+types = { path = "../formula2ddlog_ddlog/types" }
+differential_formula = { path = "../../../" }
